2012-08-21  Maxim Kuvyrkov  <maxim@codesourcery.com>

	[BZ #11607]
	* NEWS: Add an entry.
	* string/str-two-way.h (AVAILABLE1, AVAILABLE2, RET0_IF_0): New macros,
	define their defaults.
	(two_way_short_needle): Detect end-of-string on-the-fly.
	* string/strcasestr.c, string/strstr.c (AVAILABLE): Update.
	(AVAILABLE1, AVAILABLE2, RET0_IF_0, AVAILABLE_USES_J): Define.
	* string/bug-strcasestr1.c: New test.
	* string/Makefile: Run it.

2012-08-21  Maxim Kuvyrkov  <maxim@codesourcery.com>

	[BZ #11607]
	* string/str-two-way.h (two_way_short_needle): Optimize matching of
	the first character.

2012-08-21  Roland McGrath  <roland@hack.frob.com>

	* csu/elf-init.c (__libc_csu_irel): Function removed.
	* csu/libc-start.c (apply_irel): New function.
	(LIBC_START_MAIN): Call it instead of __libc_csu_irel.

2012-08-21  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/sysv/linux/kernel-features.h
	(__ASSUME_FADVISE64_64_SYSCALL): Remove.
	* sysdeps/unix/sysv/linux/i386/posix_fadvise64.S: Do not include
	<kernel-features.h>.
	[__NR_fadvise64_64]: Make code unconditional.
	[!__ASSUME_FADVISE64_64_SYSCALL]: Remove conditional code.
	[__NR_fadvise64 && (!__ASSUME_FADVISE64_64_SYSCALL ||
	!__NR_fadvise64_64)]: Likewise.
	[!(__NR_fadvise64 && (!__ASSUME_FADVISE64_64_SYSCALL ||
	!__NR_fadvise64_64))]: Likewise.
	[__NR_fadvise64]: Make code unconditional.
	[!__NR_fadvise64]: Remove conditional code.
	* sysdeps/unix/sysv/linux/posix_fadvise64.c: Do not include
	<kernel-features.h>.
	(__posix_fadvise64_l64) [__NR_fadvise64_64]: Make code
	unconditional.
	(_posix_fadvise64_l64) [!__ASSUME_FADVISE64_64_SYSCALL]: Remove
	conditional code.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/posix_fadvise64.c: Do
	not include <kernel-features.h>.
	(__posix_fadvise64_l64) [__NR_fadvise64_64]: Make code
	unconditional.
	(_posix_fadvise64_l64) [!__ASSUME_FADVISE64_64_SYSCALL]: Remove
	conditional code.
	* sysdeps/unix/sysv/linux/s390/s390-32/posix_fadvise64.c: Do not